--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,5 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
-  <li><a href="{{ root_url }}/readings">Readings</a></li>
+  <li><a href="{{ root_url }}/blog/categories/reading/">Readings</a></li>
 </ul>
